# CUSP

./: CS_results.pkl  CSsort.py  README.md  environment.yml  model.py  pyproject.toml  requirements.txt  run_CSsort.ipynb
examples/: ex_run_CUSP.ipynb
examples/examples_results/: CS_results.pkl
pretrained_model/: Unet_CSDetect_SingleOutput_12ch.pth
src/CUSP/: __init__.py  model.py  process.py
src/CUSP/pretrained_model/: CUSP_pretrained_model_20ms.pth
